models-service-refactor implemented